memperbarui folder component

--- a/component/_template.pug
+++ b/component/_template.pug
@@ -1,13 +1,16 @@
+include pug/_component.pug
+
 doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
+        link(rel='stylesheet', href='css/footer.css')
+        title perpusum
     body        
         block navigasi
-            +navigasi(....,....)
+            +navigasi
         block header
         block content            
         block footer
-            +footer(....,....)
+            +footer
