--- a/component/pug/_footer.pug
+++ b/component/pug/_footer.pug
@@ -1,84 +1,28 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    style.
-      .footer {
-          background-color: #00A000; 
-          color: #000; 
-          padding: 20px;
-          text-align: left;
-          font-family: Arial, sans-serif;
-      }
-      .footer .social-icons {
-          margin-bottom: 10px;
-      }
-      .footer .social-icons img {
-          width: 24px;
-          height: 24px;
-          margin: 0 10px;
-          vertical-align: middle;
-      }
-      .footer .info {
-          display: flex;
-          justify-content: space-between;
-          flex-wrap: wrap;
-      }
-      .footer .info div {
-          width: 30%;
-          min-width: 200px;
-      }
-
-  body
-    footer.footer
-      mixin footerContent(socialIcons, hours, services, contact)
-        .social-icons
-          each icon in socialIcons
-            img(src=icon.src, alt=icon.alt)
-        
-        .info
-          div
-            h3 Jam Operasional
-            each hour in hours
-              p= hour
-          div
-            h3 Layanan Unggulan
-            each service in services
-              p=> service
-          div
-            h3 Kontak Kami:
-            each contactItem in contact
-              p= contactItem
-
-      // Data untuk footer
-      - var socialIcons = [
-        { src: "Twitter.png", alt: "Icon Twitter" },
-        { src: "Instagram.jpg", alt: "Instagram" },
-        { src: "Youtube.webp", alt: "YouTube" },
-        { src: "Facebook.avif", alt: "Facebook" }
-      ]
-
-      - var hours = [
-        "Senin - Jumat > 07.00 - 17.00",
-        "Sabtu - Minggu > 08.00 - 17.00",
-        "Cuti bersama/libur nasional > tutup",
-        "Hak Cipta 2024 © perpusum indonesia"
-      ]
-
-      - var services = [
-        "Buku Terbaru",
-        "Buku Terpopuler",
-        "Majalah"
-      ]
-
-      - var contact = [
-        "Telepon: 0812345678",
-        "Instagram: perpusum_",
-        "Email: perpusum@gmail.com",
-        "Facebook: perpusum23",
-        "Twitter: @perpusum02",
-        "Alamat: Jl raya lenteng No 2 sumenep"
-      ]
-
-      +footerContent(socialIcons, hours, services, contact)
+mixin footer
+  footer.footer
+          .social-icons
+              img(src="Twitter.png" alt="Icon X")
+              img(src="Instagram.jpg" alt="Instagram")
+              img(src="Youtube.webp" alt="YouTube")
+              img(src="Facebook.avif" alt="Facebook")
+          
+          .info
+              div
+                  h3 Jam Operasional
+                  p Senin - Jumat &gt; 07.00 - 17.00
+                  p Sabtu - Minggu &gt; 08.00 - 17.00
+                  p Cuti bersama/libur nasional &gt; tutup
+                  p Hak Cipta 2024 &copy; perpusum indonesia
+              div
+                  h3 Layanan unggulan
+                  p &gt; Buku Terbaru
+                  p &gt; Buku Terpopuler
+                  p &gt; Majalah
+              div
+                  h3 Kontak Kami:
+                  p Telepon: 0812345678
+                  p Instagram: perpusum_
+                  p Email: perpusum@gmail.com
+                  p Facebook: perpusum23
+                  p Twitter: @perpusum02
+                  p Alamat: Jl raya lenteng No 2 sumenep
