memperbaiki file _template.pug dan _header.pug

--- a/_template.pug
+++ b/_template.pug
@@ -10,8 +10,8 @@ html(lang="en")
     body
 
     block navbar
-        include component/pug/header.pug
+        include component/pug/_header.pug
     
     block konten
 
-    block footer 
+    block footer
