memperbarui Folder Komponen

--- a/Komponen/Article Card Berita/pug/Article Card Berita.pug
+++ b/Komponen/Article Card Berita/pug/Article Card Berita.pug
@@ -81,37 +81,37 @@ html(lang="en")
   body
     .container
       .card
-        img(src="Berita.jpg", alt="Newspaper Image")
+        img(src="../../../img/Berita.jpg", alt="Newspaper Image")
         h3 Title
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         span Penulis: Puti Wijaya
         span 20 Maret 1988
       .card
-        img(src="Berita.jpg", alt="Newspaper Image")
+        img(src="../../../img/Berita.jpg", alt="Newspaper Image")
         h3 Title
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         span Penulis: Risa Sisi
         span 26 September 2017
       .card
-        img(src="Berita.jpg", alt="Newspaper Image")
+        img(src="../../../img/Berita.jpg", alt="Newspaper Image")
         h3 Title
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         span Penulis: Dewi Lestari
         span 24 Mei 2001
       .card
-        img(src="Berita.jpg", alt="Newspaper Image")
+        img(src="../../../img/Berita.jpg", alt="Newspaper Image")
         h3 Title
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         span Penulis: Fira Basuki
         span 15 Agustus 2010
       .card
-        img(src="Berita.jpg", alt="Newspaper Image")
+        img(src="../../../img/Berita.jpg", alt="Newspaper Image")
         h3 Title
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         span Penulis: Seno Gumira Ajidarma
         span 2 April 1996
       .card
-        img(src="Berita.jpg", alt="Newspaper Image")
+        img(src="../../../img/Berita.jpg", alt="Newspaper Image")
         h3 Title
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         span Penulis: Taufiq Ismail
