--- a/Komponen/Footer/pug/footer.pug
+++ b/Komponen/Footer/pug/footer.pug
@@ -32,10 +32,10 @@ head
 body
     footer.footer
         .social-icons
-            img(src="Twitter.png" alt="Icon X")
-            img(src="Instagram.jpg" alt="Instagram")
-            img(src="Youtube.webp" alt="YouTube")
-            img(src="Facebook.avif" alt="Facebook")
+            img(src="../../../img/Twitter.png" alt="Icon X")
+            img(src="../../../img/Instagram.jpg" alt="Instagram")
+            img(src="../../../img/Youtube.webp" alt="YouTube")
+            img(src="../../../img/Facebook.avif" alt="Facebook")
         
         .info
             div
