--- a/component/_component.pug
+++ b/component/_component.pug
@@ -1,10 +1,5 @@
-include _Article Card Berita.pug
-include _Article Card Perkembangan.pug
-include _bottonnext.pug
-include _buttonback.pug
-include _buttonconfirm.pug
-include _buttonprev.pug
-include _buttonviewmore.pug
+include _navbar.pug
 include _footer.pug
-include _Form.pug
-include _header.pug
+include _layanankami.pug
+include _newsCard.pug
+include _lokasiPerpusum.pug
