--- a/index.pug
+++ b/index.pug
@@ -11,4 +11,4 @@ block content
       +newsItem("Title", "img/Berita.jpg", "Lorem ipsum dolor amet, consectetur adipiscing elit. Duis pulvinar tortor hendrerit porta.", "Ayah Azhar", "9 Januari 2014")
     a.view-more(href="#") View More
 
-  +lokasiPerpusum('Lokasi Perpusum', 'path/to/your/map-image.jpg', 'Jl. Raya Lenteng No 2 Sumenep')
+  +lokasiPerpusum('Lokasi Perpusum', 'https://upload.wikimedia.org/wikipedia/id/f/f0/Peta_Sumenep_Kepulauan.png', 'Jl. Raya Lenteng No 2 Sumenep')
