memperbaiki file feedback.pug

--- a/feedback.pug
+++ b/feedback.pug
@@ -21,9 +21,11 @@ block content
         label Tipe Feedback :
         .form-options
           label
-            input(type="radio" name="feedbackType" value="Penilaian" required) Penilaian
+           input(type="radio" name="feedbackType" value="Penilaian" required) 
+           | Penilaian
           label
-            input(type="radio" name="feedbackType" value="Saran/Pertanyaan") Saran / Pertanyaan
+           input(type="radio" name="feedbackType" value="Saran/Pertanyaan") 
+           | Saran / Pertanyaan
 
       // Tombol Submit
       .form-group
