--- a/component/_navbar.pug
+++ b/component/_navbar.pug
@@ -1,6 +1,6 @@
 mixin navbar
   nav.navbar
-    img.navbar-logo(src="../img/logo.png" alt="Logo")
+    img.navbar-logo(src="img/logo.png" alt="Logo")
     ul.nav
       li.nav-item
         a(href="#") Home
@@ -19,7 +19,7 @@ mixin navbar
         a(href="#") Service >
         ul.dropdown
           li.dropdown-item
-            a(href="#") Feedback
+            a(href="feedback.html") Feedback
           li.dropdown-item
             a(href="#") Penggolongan Usia
           li.dropdown-item
