--- a/component/_navbar.pug
+++ b/component/_navbar.pug
@@ -3,7 +3,7 @@ mixin navbar
     img.navbar-logo(src="img/logo.png" alt="Logo")
     ul.nav
       li.nav-item
-        a(href="#") Home
+        a(href="index.html") Home
       li.nav-item
         a(href="#") Profile >
         ul.dropdown
