--- a/komponen/css/style.css
+++ b/komponen/css/style.css
@@ -1,3 +1,22 @@
+body {
+  display: block; /* Ini sudah ada */
+  margin: 0; /* Mengatur margin menjadi 0 */
+}
+
+h1 {
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  unicode-bidi: isolate;
+  font-family: Arial, sans-serif; /* Menambahkan font-family */
+  color: #188D00; /* Mengubah warna teks */
+  text-align: center;
+}
+
 /* Style untuk navbar */
 .navbar {
   background-color: #188d00;
@@ -189,6 +208,7 @@
 .header-berita {
   color: #4caf50;
   margin-top: 20px;
+  margin-left: 40px;
 }
 
 .container-berita {
@@ -233,15 +253,21 @@
 
 .button-container-berita {
   margin: 20px;
+  text-align: center;
 }
 
 .button-container-berita button {
-  background-color: #4caf50;
-  color: white;
+  background-color: #52A940;
+  color: black;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.button-container-berita button:hover {
+  background-color: #7DBF70;
+  color: #0015FF;
 }
 
 /* layanan kami */
@@ -518,6 +544,7 @@ body-feedback {
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .category-age {
@@ -624,7 +651,8 @@ body-feedback {
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   justify-items: center;
-  margin-top: 20px;
+  margin-top: 28px;
+  margin-bottom: 27px;
 }
 
 /* Card style for each publisher */
@@ -663,6 +691,8 @@ body-feedback {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
+  margin-top: 46px;
+  margin-bottom: 46px;
 }
 
 /* Review card styling */
