--- a/unitkerja.pug
+++ b/unitkerja.pug
@@ -2,8 +2,7 @@ extends komponen/pug/_template.pug
 
 block content
   .container-unit
-    .title-unit Unit Kerja
-    .star-icon ★
+    h1.title-unit Unit Kerja
     .grid-container-unit
       +gridItemUnit('Biro SDM dan Umum')
       +gridItemUnit('Biro Perencanaan dan Keuangan')
