--- a/pengumuman.pug
+++ b/pengumuman.pug
@@ -2,8 +2,7 @@ extends komponen/pug/_template.pug
 
 block content
   .container-announcement
-    .header-announcement Pengumuman
-    .star-announcement ★
+    h1.header-announcement Pengumuman
 
     +announcementComponent("Tanggal 28-08-2024", "Pengumuman Hasil Akhir CPNS 2024")
     +announcementComponent("Date", "Announcement.......")
