memperbarui file style.css

--- a/komponen/css/style.css
+++ b/komponen/css/style.css
@@ -301,6 +301,9 @@ h1 {
   font-size: 36px;
   margin-left: 50px;
   margin-right: 50px;
+}
+
+.service-item-services:hover {
   pointer-events: none;
 }
 
