memperbaiki halaman index dan feedback

--- a/feedback.pug
+++ b/feedback.pug
@@ -10,4 +10,6 @@ block content
       { value: 'penilaian', label: 'Penilaian' },
       { value: 'saran', label: 'Saran / Pertanyaan' }
     ])
-    button.submit-btn-feedback Next
+    button.submit-btn-feedback(onclick="navigate()") Next
+
+  script(src="script/feedback.js")
